--- a/src/main/resources/static/css/main.scss
+++ b/src/main/resources/static/css/main.scss
@@ -5,6 +5,8 @@
 @import 'components/button';
 
 // layout
+@import 'layout/main';
+@import 'layout/content';
 @import 'layout/sidebar';
 @import 'layout/navigation';
 @import 'layout/footer';
