--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -50,9 +50,56 @@ button.black_btn {
   background-color: #151515;
   border-radius: 0 !important;
 }
-
 button.black_btn:hover {
   background-color: #474747;
+}
+
+button.black_btn_sm {
+  display: inline-block;
+  width: 90px;
+  padding: 10px 8px 10px 8px;
+  font-size: 13px;
+  border: 1px solid transparent;
+  vertical-align: middle;
+  text-align: center;
+  color: #fff;
+  background-color: #151515;
+  border-radius: 0 !important;
+}
+button.black_btn_sm:hover {
+  background-color: #474747;
+}
+
+button.white_btn {
+  display: inline-block;
+  width: 130px;
+  padding: 10px 8px 10px 8px;
+  font-size: 13px;
+  border: 1px solid #e2e2e2;
+  vertical-align: middle;
+  text-align: center;
+  color: #222;
+  background-color: #fff;
+  border-radius: 0px !important;
+}
+button.white_btn:hover {
+  border: 1px solid black;
+}
+
+button.white_btn_sm {
+  display: inline-block;
+  width: 90px;
+  padding: 10px 8px 10px 8px;
+  font-size: 13px;
+  border: 1px solid #e2e2e2;
+  vertical-align: middle;
+  text-align: center;
+  color: #222;
+  background-color: #fff;
+  border-radius: 0px !important;
+}
+button.white_btn_sm:hover {
+  border: 1px solid black;
 }
 
 a.white_btn {
@@ -67,9 +114,76 @@ a.white_btn {
   background-color: #fff;
   border-radius: 0px !important;
 }
-
 a.white_btn:hover {
   border: 1px solid black;
+}
+
+label.black_btn {
+  display: inline-block;
+  width: 130px;
+  padding: 10px 8px 10px 8px;
+  font-size: 13px;
+  border: 1px solid transparent;
+  vertical-align: middle;
+  text-align: center;
+  color: #fff;
+  background-color: #151515;
+  border-radius: 0 !important;
+  cursor: pointer;
+}
+label.black_btn:hover {
+  background-color: #474747;
+}
+
+label.black_btn_sm {
+  display: inline-block;
+  width: 90px;
+  padding: 10px 8px 10px 8px;
+  font-size: 13px;
+  border: 1px solid transparent;
+  vertical-align: middle;
+  text-align: center;
+  color: #fff;
+  background-color: #151515;
+  border-radius: 0 !important;
+  cursor: pointer;
+}
+label.black_btn_sm:hover {
+  background-color: #474747;
+}
+
+label.white_btn_sm {
+  display: inline-block;
+  width: 90px;
+  padding: 4px 3px 4px 3px;
+  font-size: 11px;
+  border: 1px solid #e2e2e2;
+  vertical-align: middle;
+  text-align: center;
+  color: #222;
+  background-color: #fff;
+  border-radius: 0px !important;
+  cursor: pointer;
+}
+label.white_btn_sm:hover {
+  border: 1px solid black;
+}
+
+/* main start */
+main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  min-height: 100vh;
+}
+
+/* content start */
+.content {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 0px;
+          flex: 1 1 0;
+  padding-top: 70px;
+  padding-left: 300px;
 }
 
 /* sidebar start */
